src/compiler/snapshots/isa__compiler__lexer__tests__keyword-10.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"char\").next()"
---
Some(
    Ok(
        Spand {
            data: KwChar,
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
