src/compiler/snapshots/isa__compiler__lexer__tests__keyword-12.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"type\").next()"
---
Some(
    Ok(
        Spand {
            data: KwType,
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
