src/compiler/snapshots/isa__compiler__lexer__tests__keyword-13.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"alias\").next()"
---
Some(
    Ok(
        Spand {
            data: KwAlias,
            span: SpanData { file_id: 0, start: 0, end: 5 },
        },
    ),
)
