src/compiler/snapshots/isa__compiler__lexer__tests__keyword-14.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"class\").next()"
---
Some(
    Ok(
        Spand {
            data: KwClass,
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
