src/compiler/snapshots/isa__compiler__lexer__tests__keyword-15.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"instance\").next()"
---
Some(
    Ok(
        Spand {
            data: KwInstance,
            span: SpanData { file_id: 0, start: 0, end: 8 },
        },
    ),
)
