src/compiler/snapshots/isa__compiler__lexer__tests__keyword-16.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"infix\").next()"
---
Some(
    Ok(
        Spand {
            data: KwInfix,
            span: SpanData { file_id: 0, start: 0, end: 5 },
        },
    ),
)
