src/compiler/snapshots/isa__compiler__lexer__tests__keyword-17.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"infixl\").next()"
---
Some(
    Ok(
        Spand {
            data: KwInfixl,
            span: SpanData { file_id: 0, lo: 0, hi: 6 },
        },
    ),
)
