src/compiler/snapshots/isa__compiler__lexer__tests__keyword-18.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"infixr\").next()"
---
Some(
    Ok(
        Spand {
            data: KwInfixr,
            span: SpanData { file_id: 0, lo: 0, hi: 6 },
        },
    ),
)
