src/compiler/snapshots/isa__compiler__lexer__tests__keyword-19.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"prefix\").next()"
---
Some(
    Ok(
        Spand {
            data: KwPrefix,
            span: SpanData { file_id: 0, start: 0, end: 6 },
        },
    ),
)
