src/compiler/snapshots/isa__compiler__lexer__tests__keyword-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"let\").next()"
---
Some(
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, start: 0, end: 3 },
        },
    ),
)
