src/compiler/snapshots/isa__compiler__lexer__tests__keyword-20.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"match\").next()"
---
Some(
    Ok(
        Spand {
            data: KwMatch,
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
